--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0"
+    "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "*"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,7 +43,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://localhost:3000/",
-  "proxy": "http://localhost:8000",
+  "homepage": "https://crapalajuive.github.io/auth0_2/",
+  "proxy": "http://54.90.204.15",
   "displayName": "final"
 }
