--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,9 +24,11 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+#        cache: 'npm'
+        cache: 'yarn'
 
-    - run: npm ci
+#    - run: npm ci
+    - run: yarn install --frozen-lockfile
 
     - name: Check if CNAME exists
       id: check-cname
@@ -51,10 +53,11 @@ jobs:
           echo "REACT_APP_GITHUB_REPO=${{ github.event.repository.name }}" >> $GITHUB_OUTPUT
         fi
 
-    - name: npm build
+    - name: npm or yarn build
       run: |
         echo "repo name?: ${REACT_APP_GITHUB_REPO}"
-        npm run build --if-present
+#        npm run build --if-present
+        yarn build
       env:
           REACT_APP_AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN_C }}
           REACT_APP_AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID_C }}
