--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://crapalajuive.github.io/auth0_2/",
+  "homepage": "/auth0_2",
   "proxy": "http://codesamples.xyz:8000",
   "displayName": "final"
 }
