--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
       "react-app/jest"
     ]
   },
+  "engines": {
+    "node": "20.x"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -44,7 +47,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://crapalajuive.github.io/auth0_2",
+  "homepage": "/auth0_2",
   "proxy": "http://codesamples.xyz:8000",
   "displayName": "final"
 }
